--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
     <%= render "shared/navigation" %>
     <%= render "shared/flash" %>
     <div class="container">
-      <%= yield %>
+        <%= yield %>
     </div>
+    <div id="footer"></div>
   </body>
 </html>
